// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`comment_after.css format 1`] = `
====================================options=====================================
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
---
title: Title
description: Description
---
/* comment */
.something {
}

=====================================output=====================================
---
title: Title
description: Description
---

/* comment */
.something {
}

================================================================================
`;

exports[`dirty.css format 1`] = `
====================================options=====================================
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
---
hello:     world
a:       
            - 123
            - 666
---

.class {



}

=====================================output=====================================
---
hello: world
a:
  - 123
  - 666
---

.class {
}

================================================================================
`;

exports[`empty.css format 1`] = `
====================================options=====================================
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
---
---

a {
    color: red;
}

=====================================output=====================================
---
---

a {
  color: red;
}

================================================================================
`;

exports[`empty_newlines.css format 1`] = `
====================================options=====================================
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
---



---



a {
    color: red;
}

=====================================output=====================================
---
---

a {
  color: red;
}

================================================================================
`;

exports[`ignore.css format 1`] = `
====================================options=====================================
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
---
hello: world
---

/* prettier-ignore */
.foo {}

=====================================output=====================================
---
hello: world
---

/* prettier-ignore */
.foo {}

================================================================================
`;

exports[`malformed.css format 1`] = `
====================================options=====================================
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
---
aaa
b---

a {
    color: red;
}
=====================================output=====================================
--- aaa b--- a {
  color: red;
}

================================================================================
`;

exports[`malformed-2.css format 1`] = `
====================================options=====================================
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
---
foo: bar
---

a {
color:blue
}

---

.b {
color:red
}
=====================================output=====================================
---
foo: bar
---

a {
  color: blue;
}

--- .b {
  color: red;
}

================================================================================
`;

exports[`only_comments.css format 1`] = `
====================================options=====================================
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
---
# comment 1
# comment 2
# comment 3
---

a {
    color: red;
}

=====================================output=====================================
---
# comment 1
# comment 2
# comment 3
---

a {
  color: red;
}

================================================================================
`;

exports[`with_comments.css format 1`] = `
====================================options=====================================
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
---
title: Title
description: Description
# This is a comment
---

a {
    color: red;
}
=====================================output=====================================
---
title: Title
description: Description
# This is a comment
---

a {
  color: red;
}

================================================================================
`;

exports[`without-newline-after.css format 1`] = `
====================================options=====================================
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
---
title: Title
description: Description
---
a {
    color: red;
}

=====================================output=====================================
---
title: Title
description: Description
---

a {
  color: red;
}

================================================================================
`;

exports[`yaml.css format 1`] = `
====================================options=====================================
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
---
title: Title
description: Description
---

a {
    color: red;
}

=====================================output=====================================
---
title: Title
description: Description
---

a {
  color: red;
}

================================================================================
`;
